gitops/tenants/tenant2/overlays/dev/ingress-services/inventory-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
spec:
  template:
    spec:
      volumes:
      - name: flyway-scripts
        configMap:
          name: inventory-flyway-scripts-dev
      containers:
      - name: inventory-service
