gitops/tenants/tenant2/overlays/dev/ingress-services/recommendation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recommendation-ingress
spec:
  rules:
  - host: tenant2.dev.tenark.com
  tls:
  - hosts:
    - tenant2.dev.tenark.com
    secretName: keyvault-recommendation-ingress-dev
